fix(docs): improve copy

--- a/apps/web/src/components/ThemeSwitcher.astro
+++ b/apps/web/src/components/ThemeSwitcher.astro
@@ -2,16 +2,13 @@
 import Button from "@bejamas/ui/components/Button.astro";
 import Dropdown from "@bejamas/ui/components/Dropdown.astro";
 import Select from "@bejamas/ui/components/Select.astro";
-
-import Sun from "iconoir/icons/sun-light.svg";
-import Moon from "iconoir/icons/half-moon.svg";
-import Laptop from "iconoir/icons/laptop.svg";
+import { SunIcon, MoonIcon, LaptopIcon } from "@lucide/astro";
 ---
 
 <div class="relative text-sm">
   <div class="absolute z-10 left-3 top-2.5">
-    <Sun class="size-4 dark:hidden" />
-    <Moon class="size-4 hidden dark:block" />
+    <SunIcon class="size-4 dark:hidden" />
+    <MoonIcon class="size-4 hidden dark:block" />
   </div>
   <Select showCheckmark={false}>
     <Select part="indicator" />
@@ -22,9 +19,15 @@ import Laptop from "iconoir/icons/laptop.svg";
       showCheckmark={false}
       class="pl-9 w-28"
     >
-      <Select part="option" value="light"><Sun class="size-4" /> Light</Select>
-      <Select part="option" value="dark"><Moon class="size-4" /> Dark</Select>
-      <Select part="option" value="auto"><Laptop class="size-4" /> Auto</Select>
+      <Select part="option" value="light"
+        ><SunIcon class="size-4" /> Light</Select
+      >
+      <Select part="option" value="dark"
+        ><MoonIcon class="size-4" /> Dark</Select
+      >
+      <Select part="option" value="auto"
+        ><LaptopIcon class="size-4" /> Auto</Select
+      >
     </Select>
   </Select>
 </div>
