--- a/packages/ui/src/components/Select.astro
+++ b/packages/ui/src/components/Select.astro
@@ -114,7 +114,7 @@
  *
  */
 
-import ChevronDown from "iconoir/icons/nav-arrow-down.svg";
+import { ChevronDown } from "@lucide/astro";
 import type { HTMLAttributes, HTMLTag } from "astro/types";
 import { cva } from "class-variance-authority";
 import { cn } from "@bejamas/ui/lib/utils";
