--- a/packages/ui/src/components/Separator.astro
+++ b/packages/ui/src/components/Separator.astro
@@ -8,7 +8,7 @@
  * @example
  * <div>
  *   <div class="space-y-1">
- *     <h4 class="text-sm leading-none font-medium">Radix Primitives</h4>
+ *     <h4 class="text-sm leading-none font-medium">bejamas/ui</h4>
  *     <p class="text-muted-foreground text-sm">
  *       An open-source UI component library.
  *     </p>
